--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "live-server": "^1.2.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
+    "react-modal": "^3.4.5",
     "validator": "^10.2.0",
     "webpack": "^4.10.2",
     "webpack-dev-server": "^3.1.4"
