--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jshint": "^2.9.5",
     "live-server": "^1.2.0",
     "node-sass": "^4.9.0",
+    "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0",
     "react-modal": "^3.4.5",
